# ann-visual-emotion

./: .gitattributes  .gitignore  ADVANCED_FEATURES_SUMMARY.md  ANN_Visual_Emotion_Recognition_Comprehensive_Report.md  ANN_Visual_Emotion_Recognition_Report.docx  ARCHITECTURE_COMPARISON.md  CNN_TRANSFER_LEARNING_README.md  DATASET_BALANCING_README.md  ENHANCED_CNN_IMPLEMENTATION_GUIDE.md  ENHANCED_CNN_README.md  ENHANCED_MODEL_GUIDE.md  ENHANCED_MODEL_README.md  ENHANCED_README.md  Enhanced_CNN_README.md  HIGH_ACCURACY_MODEL_README.md  IMPLEMENTATION_SUMMARY.md  MODEL_COMPARISON.md  QUICK_START_GENAI.md  README.md  README_48x48_UPDATE.md  README_Direct_48x48.md  README_ENHANCED_MODEL.md  REPORT_GENERATION_SUMMARY.md  cnn_transfer_learning_demo.py  comparison_demo_48x48_approaches.py  complete_notebook.py  create_enhanced_notebook.py  create_word_report.py  demo_advanced_features.py  demo_comparison.py  demo_high_accuracy_model.py  enhanced_cnn_48x48_demo.py  enhanced_emotion_model.py  extend_notebook.py  high_accuracy_emotion_model.py  inference_48x48_grayscale.py  model_improvements_demo.py  pyproject.toml  requirements.txt  simple_enhanced_model.py  (+10 more)
configs/: data.yaml  eval.yaml  model.yaml  train.yaml
docker/: Dockerfile.api
docs/: GENERATIVE_AI_ENHANCEMENT.md  eda.md  feature_engineering_balancing.md  genai_findings.md  model_design.md  xai_comparison.md
hf_space_emotion_api/: Dockerfile  README.md  app.py  label_map.json  requirements.txt
models/: README.md
notebooks/: 01_eda.ipynb  02_baseline.ipynb  02_feature_engineering_balancing.ipynb  (+33 more)
(+21532 files in other folders)
